ejercicio de revision de codigo

--- a/formulario.html
+++ b/formulario.html
@@ -5,34 +5,51 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" media="screen" href="./styles.css">
+  <link rel="stylesheet" type="text/css" media="screen" href="./assets/styles.css">
   <title>Formulario</title>
+  <!--En la parte de head, se agrega una carpeta para contener hoja de estilos y se redirige a la carpeta en href-->
 </head>
+
 <body>
-  <h1>Bienvenidos a mi fiesta</h1>
-  <h2>Por favor, confirmar asistencia:</h2>
+  <!--Se crea un div propio para el formulario-->
+  <div class="containerGeneral">
+    <h1>Bienvenidos a mi fiesta</h1>
+    <h2>Por favor, confirmar asistencia:</h2>
 
-  <form class="formulario">
-    Nombre <input type="text" name="name" id="name">
-    <br />
-    Edad <input type="number" name="age" id="age">
-    <br />
+    <!--Se corrige el cuerpo del formulario añadiendo "label"-->
+    <div class="containerForm">
+      <form class="formulario">
+        <label id="name"> Nombre</label>
+        <input type="text" name="name" id="name">
+        <br />
+        <label id="edad">Edad</label>
+        <input type="number" name="age" id="age">
+        <br />
 
-    Nacionalidad
-    <select name="nationality" id="nationality">
-      <option value="ar">Argentina</option>
-      <option value="mx">Mexicana</option>
-      <option value="per">Peruana</option>
-      <option value="vnzl">Venezolana</option>
-    </select>
-    <br />
-    <input type="submit">
-  </form>
+        <label id="Nacionality"> Nacionalidad</label>
 
-  <div>
-    <h2>Lista de invitados</h2>
+        <select name="nationality" id="nationality">
+          <option value="ar">Argentina</option>
+          <option value="mx">Mexicana</option>
+          <option value="per">Peruana</option>
+          <option value="vnzl">Venezolana</option>
+        </select>
+        <br />
 
-  </div>
+        <button><input id="enviar" type="submit"></button><!--le di un boton tipo boton al input -->
+
+
+      </form>
+    </div>
+
+
+    <div class="invitadosLista" id="lista-de-invitados">
+      <!--Empieza div de lista de invitados y se crea un id llamado "lista-de-invitados"-->
+      <h2>Lista de invitados</h2>
+
+    </div>
+
+  </div><!--Termina div general-->
 
   <script src="../formulario.js"></script>
 </body>
